// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStatesAbbrList should return list of abbreviations 1`] = `
Array [
  "TST0",
  "TST1",
  "TST2",
  "TST3",
]
`;

exports[`getStatesTypeAhead should return array of states that starts with symbols 1`] = `
Array [
  "Test0",
]
`;

exports[`getStatesTypeAhead should return array of states that starts with symbols limitted to 3 matches 1`] = `
Array [
  "Test0",
  "Test1",
  "Test2",
]
`;

exports[`getStatesTypeAhead should return empty array when no input 1`] = `Array []`;

exports[`zipLookup should reject on invalid zip 1`] = `"Zip code is required"`;

exports[`zipLookup should resolve correct zip 1`] = `"TST"`;
